--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Artists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+h1 {
+	
+    font-family: 'Arvo', serif;
+
+
+}
+
+   // font-family: 'Open Sans', sans-serif;
