--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -18,7 +18,15 @@
 
   <div class="field">
     <%= form.label :genre_id %>
-    <%= form.text_field :genre_id, id: :artist_genre_id %>
+    <%= form.collection_select :genre_id, Genre.all, :id, :name %>
+     
+
+
+
+    <!-- < %= form.text_field :genre_id, id: :artist_genre_id %> -->
+       <!-- < %= form.collection_select :artist_id, Arist.all, :id, :name %> 
+
+        < %= form.collection_select :artist_id, Artist.all, :id, :name %> -->
   </div>
 
   <div class="actions">
