--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -2,9 +2,10 @@
 
 <h1>Artists</h1>
 
-<table>
+<table class="table table-striped table-hover">
   <thead>
     <tr>
+      <th>ID</th>
       <th>Name</th>
       <th>Genre</th>
       <th colspan="3"></th>
@@ -13,17 +14,20 @@
 
   <tbody>
     <% @artists.each do |artist| %>
-      <tr>
-        <td><%= artist.name %></td>
-        <td><%= artist.genre %></td>
-        <td><%= link_to 'Show', artist %></td>
-        <td><%= link_to 'Edit', edit_artist_path(artist) %></td>
-        <td><%= link_to 'Destroy', artist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <tr>
+      <td><%= artist.id %></td>
+      <td><%= artist.name %></td>
+      <td><%= artist.genre.try(:name) %></td>
+      <td><%= link_to 'Show', artist %></td>
+      <td><%= link_to 'Edit', edit_artist_path(artist) %></td>
+      <td><%= link_to 'Destroy', artist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Artist', new_artist_path %>
+<div class="text-center">
+  <%= link_to 'New Artist', new_artist_path, class: 'btn btn-default' %>
+</div>
