--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,14 +1,31 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @artist.name %>
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
 
-<p>
-  <strong>Genre:</strong>
-  <%= @artist.genre %>
-</p>
+      <h1 style="text-align: left"><%= @artist.name %></h1>
 
-<%= link_to 'Edit', edit_artist_path(@artist) %> |
-<%= link_to 'Back', artists_path %>
+
+
+      <p>
+        <strong>Genre:</strong>
+        <%= @artist.genre.name %>
+      </p>
+
+      <strong>Songs:</strong>
+      <ul>
+        <%  @artist.songs.each do |ditty|%>
+        <li><%= ditty.name %></li>
+        <% end %>
+
+      </ul>
+
+
+
+
+      <%= link_to 'Edit', edit_artist_path(@artist), class: 'btn btn-default' %> |
+      <%= link_to 'Back', artists_path, class: 'btn btn-default' %>
+    </div>
+  </div>
+</div>
