--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -2,26 +2,29 @@
 
 <h1>Genres</h1>
 
-<table>
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3"></th>
+      <th>ID</th>
+
     </tr>
   </thead>
 
   <tbody>
     <% @genres.each do |genre| %>
-      <tr>
-        <td><%= genre.name %></td>
-        <td><%= link_to 'Show', genre %></td>
-        <td><%= link_to 'Edit', edit_genre_path(genre) %></td>
-        <td><%= link_to 'Destroy', genre, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <tr>
+      <td><%= genre.name %></td>
+      <td><%= genre.id %></td>
+      <td><%= link_to 'Show', genre %></td>
+      <td><%= link_to 'Edit', edit_genre_path(genre) %></td>
+      <td><%= link_to 'Destroy', genre, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Genre', new_genre_path %>
+<div class='text-center'>
+  <%= link_to 'New Genre', new_genre_path, class: 'btn btn-default' %>
+</div>
