--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,9 +1,19 @@
 <p id="notice"><%= notice %></p>
+<div class="container-fluid">
+  <div class="row text-center">
+    <div class="col-md-6 col-md-offset-3">
+      <h1>Artists in <%= @genre.name %></h1>
 
-<p>
-  <strong>Name:</strong>
-  <%= @genre.name %>
-</p>
+      <ul>
+        <% @genre.artists.order('name').each do |artist| %>
+        <li><%= link_to artist.name, artist_path(artist) %></li>
+        <% end %>
 
-<%= link_to 'Edit', edit_genre_path(@genre) %> |
-<%= link_to 'Back', genres_path %>
+      </ul>
+
+
+      <%= link_to 'Edit', edit_genre_path(@genre) %> |
+      <%= link_to 'Back', genres_path %>
+    </div>
+  </div>
+</div>
