--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Songs</h1>
 
-<table>
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -15,7 +15,7 @@
     <% @songs.each do |song| %>
       <tr>
         <td><%= song.name %></td>
-        <td><%= song.artist %></td>
+        <td><%= song.artist.try(:name) %></td>
         <td><%= link_to 'Show', song %></td>
         <td><%= link_to 'Edit', edit_song_path(song) %></td>
         <td><%= link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -26,4 +26,6 @@
 
 <br>
 
-<%= link_to 'New Song', new_song_path %>
+<div class="text-center">
+  <%= link_to 'New Song', new_song_path, class: 'btn btn-default' %>
+</div>
